Fixes Illegal reflective access exception